# experiments

./: README.md  go.mod  housework.db
.github/null/: sample.yaml
.github/workflows/: calibreapp-image-actions.yaml  calibreapp-image-actions.yml  compress-image.yaml
C/: chapter1.c  cmd  cmu_1.c  copy.c  data_types.c  dollar.c  float-error  float-error.c  get_string.c  int_memory.c  memory.c  swap.c
C/Linked List/: main.c
C/bit&signals/: main.c
C/casting/: main  main.c
C/header_files/: CMakeLists.txt  main.c
C/header_files/include/: vin.h
C/header_files/lib/: vin.c
C/sqlite3/: main  main.c  test.db
DSA/Go/: go.mod
Rust/active-object/: main.rs
Rust/active-record/: main.rs
Rust/arc/: main.rs
Rust/channels/: main.rs
Rust/concurrent-error-handling/: main.rs
Rust/deadline/: main.rs
Rust/dummy/: Cargo.toml  file1.txt  file2.txt  file3.txt
Rust/half-sync@half-async/: main.rs
Rust/leader-follower/: main.rs
Rust/monitor-object/: main.rs
Rust/mutex-lock/: main.rs
Rust/mutex-poisioning/: Cargo.toml
Rust/rayon/: main.rs
Rust/testing-concurrent-code/: main.rs
Rust/thread/: main.rs
Rust/thread-specific-storage/: main.rs
Rust/tracing-mutex/: Cargo.toml
Rust/worker-pools/: main.rs
TypeScript/compose/: index.ts
TypeScript/tRPC-article/: package-lock.json
TypeScript/vector_project/: package-lock.json  package.json  tsconfig.json
go/DSA/: ring.go
go/archive/: main.go
libcurl/: main  main.c
opentelemetry/: go.mod  go.sum  main.go
python/: hello_world.py  making_pizza.py  pizza.py  username.json
shell/: func.sh  mcd.sh
(+151 files in other folders)
